@@ -1,3 +1,7 @@
+Sun Mar 20 09:16:53 CET 2011
+	Fixing race when using MHD_USE_THREAD_PER_CONNECTION in combination
+	with MHD_USE_POLL. -CG
+
 Fri Mar 18 13:23:47 CET 2011
 	Removing MSG_DONTWAIT which should not be needed and was presumably
 	causing problems with EAGAIN under certain circumstances. -ES
